--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+~\$NOVA Code Camp Spring 2018\.pptx
+
+build/contracts/
